examples/test/testpolicy11250.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11250
  namespace: namespace20
spec:
  podSelector:
    matchLabels:
      key48: value23
      key25: value41
      key15: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value0
      podSelector:
        matchLabels:
          key4: value5
          key9: value13
          key46: value18
